Fixed light and dark mode on all pages
Login, SIgnup, and Dashbaord pages

--- a/WebApp/app/globals.css
+++ b/WebApp/app/globals.css
@@ -1,3 +1,5 @@
+/* Name(s): Katie Golder, Emily Tso */
+
 @import "tailwindcss";
 
 @theme {
@@ -21,4 +23,11 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+text {
+  color: var(--foreground);
+  background: var(--background);
+  font-family: Arial, Helvetica, sans-serif; 
 }
